' Generated by UML Generator
' Encoded: TLJHJiCW57tlL_2eBaryReoPqPSbYp7R_01MI2KoQ80Qf_7VlHTQ2cLxMUYvznxEES3Mrb7ZXfEixATGFJNqH5f9hNropeZZuFYcrMelVZYvhpu4uwGLffMygdmNUPEqvNR7RQ-LvUIt8gJkFTQGhR3kmJSy8bp3pwhZBepSt2uRLZRMBZ10-vSMhFhBTWuR2jQGFSXL7NwvSnzd0-gtDzJ1iY4lUZY2Va06oytEeyzwKAuX6-LunmtMf6wXeXNmZ2j4cR0WxVnAJno8ve_KteQXjIW7NG4qIvoCXEu3YerPp79nBDGksCafWWNaYDPmUeHps_daUnu0KimH8CUouLfYEUsKcBSrfuU4iLJcctCauNfdMTR8b3PSEvRYpanxXMiZOUq61ZCitWcfLLU0qz5knm5KnDAiOs59kGnc92y9OgKGK9X830OVZd-xz05CSW-05tVHW-b4mhzupBgkmoiB1N87t_4yPoWzcpLN3FvC_W4
' URL: http://www.plantuml.com/plantuml/uml/TLJHJiCW57tlL_2eBaryReoPqPSbYp7R_01MI2KoQ80Qf_7VlHTQ2cLxMUYvznxEES3Mrb7ZXfEixATGFJNqH5f9hNropeZZuFYcrMelVZYvhpu4uwGLffMygdmNUPEqvNR7RQ-LvUIt8gJkFTQGhR3kmJSy8bp3pwhZBepSt2uRLZRMBZ10-vSMhFhBTWuR2jQGFSXL7NwvSnzd0-gtDzJ1iY4lUZY2Va06oytEeyzwKAuX6-LunmtMf6wXeXNmZ2j4cR0WxVnAJno8ve_KteQXjIW7NG4qIvoCXEu3YerPp79nBDGksCafWWNaYDPmUeHps_daUnu0KimH8CUouLfYEUsKcBSrfuU4iLJcctCauNfdMTR8b3PSEvRYpanxXMiZOUq61ZCitWcfLLU0qz5knm5KnDAiOs59kGnc92y9OgKGK9X830OVZd-xz05CSW-05tVHW-b4mhzupBgkmoiB1N87t_4yPoWzcpLN3FvC_W4
' Generated on: 2026-05-25T15:52:34.114191200

@startuml

class PlacesResponse {
  -places: List<Place>
  --
  +getPlaces(): List<Place>
  +setPlaces(places: List<Place>): void
}

class Place {
  -id: String
  -types: List<String>
  -rating: Double
  -userRatingCount: Integer
  -location: Location
  -displayName: DisplayName
  --
  +getId(): String
  +setId(id: String): void
  +getTypes(): List<String>
  +setTypes(types: List<String>): void
  +getRating(): Double
  +setRating(rating: Double): void
  +getUserRatingCount(): Integer
  +setUserRatingCount(userRatingCount: Integer): void
  +getLocation(): Location
  +setLocation(location: Location): void
  +getDisplayName(): DisplayName
  +setDisplayName(displayName: DisplayName): void
}

class Location {
  -latitude: double
  -longitude: double
  --
  +getLatitude(): double
  +setLatitude(latitude: double): void
  +getLongitude(): double
  +setLongitude(longitude: double): void
}

class DisplayName {
  -text: String
  --
  +getText(): String
  +setText(text: String): void
}

PlacesResponse o-- Place
Place *-- Location
Place *-- DisplayName
@enduml